# willowencrypt

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mainConfig.hpp.in
examples/: ex_ascii.txt  ex_ascii_1.txt  ex_decrypted_2.json  ex_encrypted_1.lvbn  ex_encrypted_2.lvbn  ex_gamesave.json  ex_genAscii_2.txt
lib/: CMakeLists.txt  dummy.cpp
lib/include/: manual.h  manual.hpp
